Fix to single product page spacing for PayPal button

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -142,5 +142,14 @@
   }
 }
 
+.ecomproduct__form button, a {
+        float: none;
+    }
+    
+    .paypal-button-container, .ecomproduct__paypal-commerce-button-container {
+        padding: 20px 0;
+        width: 48%;
+    }
+
 
 } // End of #migrated-site
